--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -513,35 +513,21 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
                                     <button 
-                                        v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
-                                        @click="selectEpisode(episode)" 
-                                        class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
-                                        {{ episode.EpisodeNumber }}
-                                    </button>                                
+                                    v-for="episode in groupedEpisodes[activeTab.episodes]?.items" 
+                                    @click="selectEpisode(episode)" 
+                                    class="bg-blue-500 text-white p-2 rounded hover:bg-green-500">
+                                    {{ episode.EpisodeNumber }}
+                                </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                <div class="flex items-center px-4">
-                                    <div class="w-8 flex justify-start">
-                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
-                                        </button>
-                                    </div>
-                                    <div class="flex-grow text-center">
-                                        <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
-                                    </div>
-                                    <div class="w-8 flex justify-end">
-                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
-                                        </button>
-                                    </div>
-                                </div>
+                                    <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
                                     <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
                                         <button
-                                            :disabled="video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending'"
+                                            :disabled="video.status === 'success'"
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
                                             class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50">
                                             {{ video.Resolution }} ({{ video.Size }} MB)
@@ -597,7 +583,7 @@
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
                                         <button
-                                            :disabled="video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending'"
+                                            :disabled="video.status === 'success'"
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
                                             class="bg-amber-700 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50">
                                             {{ video.Resolution }} ({{ video.Size }} MB)
@@ -639,7 +625,7 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedManga" class="grid grid-cols-3 gap-2" dir="ltr">
+                                <div v-if="!selectedManga" class="grid grid-cols-3 gap-2">
                                     <button 
                                     v-for="manga in groupedMangas[activeTab.mangas]?.items" 
                                     @click="selectManga(manga)" 
@@ -652,7 +638,7 @@
                                         <span class="text-lg font-bold text-center">{{ selectedManga.MangaNumber }}</span>
                                         <div class="relative w-full">    
                                             <button
-                                                :disabled="selectedManga.status === 'success' || selectedManga.status === 'ratelimiting' || selectedManga.status === 'sending'"
+                                                :disabled="selectedManga.status === 'success'"
                                                 @click="sendMangaToBotD(selectedManga.MangaFileID, selectedManga.MangaNumber, 0)"
                                                 class="w-full bg-green-500 text-white px-6 py-2 rounded hover:bg-blue-500 flex items-center justify-center shadow-md disabled:opacity-50" dir="ltr">
                                                 {{ formatMangaSize(selectedManga.MangaFileSize) }}
@@ -6362,24 +6348,6 @@
                         }
                         return acc;
                     }, []);
-                },
-
-                hasNextEpisode() {
-                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
-                        return false;
-                    }
-                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
-                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
-                    return currentIndex !== -1 && currentIndex < currentGroup.length - 1;
-                },
-
-                hasPreviousEpisode() {
-                    if (!this.selectedEpisode || !this.groupedEpisodes[this.activeTab.episodes]) {
-                        return false;
-                    }
-                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
-                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
-                    return currentIndex !== -1 && currentIndex > 0;
                 },
 
                 filteredEpisodes() {
@@ -14382,53 +14350,22 @@
                     let caption = `*${label} ${episodeNumber}\nالجودة: ${resolution}\nالحجم: ${size} ميجا*`;
                     if (details) caption += `\n\n*✦✦— محتويات الحلقة —✦✦*${details}`;
 
-                    // Set all other videos to ratelimiting
-                    if (this.selectedEpisode.EpisodeVideosIDs) {
-                        this.selectedEpisode.EpisodeVideosIDs.forEach((video, i) => {
-                            if (i !== index && video.status !== 'success' && video.status !== 'error') {
-                                this.$set(this.selectedEpisode.EpisodeVideosIDs[i], 'status', 'ratelimiting');
-                            }
-                        });
-                    }
-                    
-                    // Set all mangas to ratelimiting
-                    if (this.selectedEpisode.EpisodeMangasIDs) {
-                        this.selectedEpisode.EpisodeMangasIDs.forEach((manga, i) => {
-                            if (manga.status !== 'success' && manga.status !== 'error') {
-                                this.$set(this.selectedEpisode.EpisodeMangasIDs[i], 'status', 'ratelimiting');
-                            }
-                        });
-                    }
-
-                    this.$set(this.selectedEpisode.EpisodeVideosIDs[index], 'status', 'sending');
+                    this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
 
                     try {
                         await this.sendVideoResponse(chatId, videoID, caption);
-                        this.$set(this.selectedEpisode.EpisodeVideosIDs[index], 'status', 'success');
+                        this.selectedEpisode.EpisodeVideosIDs[index].status = 'success';
                         this.errorMessage = "";
                     } catch (error) {
-                        this.$set(this.selectedEpisode.EpisodeVideosIDs[index], 'status', 'error');
+                        this.selectedEpisode.EpisodeVideosIDs[index].status = 'error';
                         this.errorMessage = error.message;
-                    } finally {
-                        // Clear ratelimiting status from all buttons
-                        if (this.selectedEpisode.EpisodeVideosIDs) {
-                            this.selectedEpisode.EpisodeVideosIDs.forEach((video, i) => {
-                                if (video.status === 'ratelimiting') {
-                                    this.$set(this.selectedEpisode.EpisodeVideosIDs[i], 'status', null);
-                                }
-                            });
-                        }
-                        if (this.selectedEpisode.EpisodeMangasIDs) {
-                            this.selectedEpisode.EpisodeMangasIDs.forEach((manga, i) => {
-                                if (manga.status === 'ratelimiting') {
-                                    this.$set(this.selectedEpisode.EpisodeMangasIDs[i], 'status', null);
-                                }
-                            });
+                        if (this.selectedEpisode.EpisodeVideosIDs.some((video) => video.status === "error")) {
+                            return;
                         }
                     }
 
                     setTimeout(() => {
-                        this.$set(this.selectedEpisode.EpisodeVideosIDs[index], 'status', null);
+                        this.selectedEpisode.EpisodeVideosIDs[index].status = null;
                     }, 5000);
                 },
 
@@ -14505,53 +14442,22 @@
                     const chatId = localStorage.getItem('AreTheUserJoinToTheChannel');
                     const caption = `*الفصل: ${mangaNumber}*`;
 
-                    // Set all videos to ratelimiting
-                    if (this.selectedEpisode.EpisodeVideosIDs) {
-                        this.selectedEpisode.EpisodeVideosIDs.forEach((video, i) => {
-                            if (video.status !== 'success' && video.status !== 'error') {
-                                this.$set(this.selectedEpisode.EpisodeVideosIDs[i], 'status', 'ratelimiting');
-                            }
-                        });
-                    }
-
-                    // Set all other mangas to ratelimiting
-                    if (this.selectedEpisode.EpisodeMangasIDs) {
-                        this.selectedEpisode.EpisodeMangasIDs.forEach((manga, i) => {
-                            if (i !== index && manga.status !== 'success' && manga.status !== 'error') {
-                                this.$set(this.selectedEpisode.EpisodeMangasIDs[i], 'status', 'ratelimiting');
-                            }
-                        });
-                    }
-
-                    this.$set(this.selectedEpisode.EpisodeMangasIDs[index], 'status', 'sending');
+                    this.selectedEpisode.EpisodeMangasIDs[index].status = 'sending';
 
                     try {
                         await this.sendMangaResponse(chatId, fileId, caption);
-                        this.$set(this.selectedEpisode.EpisodeMangasIDs[index], 'status', 'success');
+                        this.selectedEpisode.EpisodeMangasIDs[index].status = 'success';
                         this.errorMessage = "";
                     } catch (error) {
-                        this.$set(this.selectedEpisode.EpisodeMangasIDs[index], 'status', 'error');
+                        this.selectedEpisode.EpisodeMangasIDs[index].status = 'error';
                         this.errorMessage = error.message;
-                    } finally {
-                        // Clear ratelimiting status from all buttons
-                        if (this.selectedEpisode.EpisodeVideosIDs) {
-                            this.selectedEpisode.EpisodeVideosIDs.forEach((video, i) => {
-                                if (video.status === 'ratelimiting') {
-                                    this.$set(this.selectedEpisode.EpisodeVideosIDs[i], 'status', null);
-                                }
-                            });
-                        }
-                        if (this.selectedEpisode.EpisodeMangasIDs) {
-                            this.selectedEpisode.EpisodeMangasIDs.forEach((manga, i) => {
-                                if (manga.status === 'ratelimiting') {
-                                    this.$set(this.selectedEpisode.EpisodeMangasIDs[i], 'status', null);
-                                }
-                            });
+                        if (this.selectedEpisode.EpisodeMangasIDs.some(manga => manga.status === "error")) {
+                            return;
                         }
                     }
 
                     setTimeout(() => {
-                        this.$set(this.selectedEpisode.EpisodeMangasIDs[index], 'status', null);
+                        this.selectedEpisode.EpisodeMangasIDs[index].status = null;
                     }, 5000);
                 },
 
@@ -14773,22 +14679,6 @@
                     };
                 },
 
-                resetStatusForEpisodeManga() {
-                    // Reset status for all videos and episode mangas when closing modal 
-                    if (this.selectedEpisode) {
-                        if (this.selectedEpisode.EpisodeVideosIDs) {
-                        this.selectedEpisode.EpisodeVideosIDs.forEach((video, index) => {
-                            this.$set(this.selectedEpisode.EpisodeVideosIDs[index], 'status', null);
-                        });
-                        }
-                        if (this.selectedEpisode.EpisodeMangasIDs) {
-                        this.selectedEpisode.EpisodeMangasIDs.forEach((manga, index) => {
-                            this.$set(this.selectedEpisode.EpisodeMangasIDs[index], 'status', null);
-                        });
-                        }
-                    }
-                },
-
                 handleEpisodeGroupChange(index) {
                     if (this.selectedEpisode) {
                         this.resetEpisodesView();
@@ -14812,24 +14702,6 @@
 
                 selectEpisode(episode) {
                     this.selectedEpisode = episode;
-                },
-
-                navigateToNextEpisode() {
-                    if (!this.hasNextEpisode) return;
-                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
-                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
-                    if (currentIndex !== -1 && currentIndex < currentGroup.length - 1) {
-                        this.selectedEpisode = currentGroup[currentIndex + 1];
-                    }
-                },
-
-                navigateToPreviousEpisode() {
-                    if (!this.hasPreviousEpisode) return;
-                    const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
-                    const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
-                    if (currentIndex !== -1 && currentIndex > 0) {
-                        this.selectedEpisode = currentGroup[currentIndex - 1];
-                    }
                 },
 
                 selectMovie(movie) {
