--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -522,21 +522,21 @@
                                     </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                <div class="flex items-center px-4">
-                                    <div class="w-8 flex justify-start">
-                                        <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
-                                        </button>
+                                    <div class="flex items-center px-4">
+                                        <div class="w-8 flex justify-start">
+                                            <button v-if="hasNextEpisode" @click="navigateToNextEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                        </div>
+                                        <div class="flex-grow text-center">
+                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
+                                        </div>
+                                        <div class="w-8 flex justify-end">
+                                            <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                        </div>
                                     </div>
-                                    <div class="flex-grow text-center">
-                                        <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
-                                    </div>
-                                    <div class="w-8 flex justify-end">
-                                        <button v-if="hasPreviousEpisode" @click="navigateToPreviousEpisode(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
-                                            <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
-                                        </button>
-                                    </div>
-                                </div>
                                     <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
@@ -592,7 +592,21 @@
                                 </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
-                                    <span class="text-lg font-bold text-center">{{ selectedEpisode.EpisodeNumber }}</span>
+                                    <div class="flex items-center px-4">
+                                        <div class="w-8 flex justify-start">
+                                            <button v-if="hasNextMovie" @click="navigateToNextMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                        </div>
+                                        <div class="flex-grow text-center">
+                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
+                                        </div>
+                                        <div class="w-8 flex justify-end">
+                                            <button v-if="hasPreviousMovie" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                        </div>
+                                    </div>
                                     <div v-for="(video, index) in selectedEpisode.EpisodeVideosIDs" 
                                         :key="video.VideoID" 
                                         class="relative flex flex-col gap-4">
@@ -648,8 +662,22 @@
                                 </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
+                                    <div class="flex items-center px-4">
+                                        <div class="w-8 flex justify-start">
+                                            <button v-if="hasNextManga" @click="navigateToNextManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                        </div>
+                                        <div class="flex-grow text-center">
+                                            <span class="text-lg font-bold">{{ selectedManga.MangaNumber }}</span>
+                                        </div>
+                                        <div class="w-8 flex justify-end">
+                                            <button v-if="hasPreviousManga" @click="navigateToPreviousManga();" class="hover:opacity-70 transition-opacity">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                        </div>
+                                    </div>
                                     <div class="relative flex flex-col gap-4">
-                                        <span class="text-lg font-bold text-center">{{ selectedManga.MangaNumber }}</span>
                                         <div class="relative w-full">    
                                             <button
                                                 :disabled="selectedManga.status === 'success'"
@@ -6379,6 +6407,42 @@
                     }
                     const currentGroup = this.groupedEpisodes[this.activeTab.episodes].items;
                     const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                hasNextMovie() {
+                    if (!this.selectedEpisode || !this.groupedMovies[this.activeTab.movies]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex < currentGroup.length - 1;
+                },
+
+                hasPreviousMovie() {
+                    if (!this.selectedEpisode || !this.groupedMovies[this.activeTab.movies]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                hasNextManga() {
+                    if (!this.selectedManga || !this.groupedMangas[this.activeTab.mangas]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
+                    return currentIndex !== -1 && currentIndex < currentGroup.length - 1;
+                },
+
+                hasPreviousManga() {
+                    if (!this.selectedManga || !this.groupedMangas[this.activeTab.mangas]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
                     return currentIndex !== -1 && currentIndex > 0;
                 },
 
@@ -14767,6 +14831,42 @@
                     const currentIndex = currentGroup.findIndex(ep => ep.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
                     if (currentIndex !== -1 && currentIndex > 0) {
                         this.selectedEpisode = currentGroup[currentIndex - 1];
+                    }
+                },
+
+                navigateToNextMovie() {
+                    if (!this.hasNextMovie) return;
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    if (currentIndex !== -1 && currentIndex < currentGroup.length - 1) {
+                        this.selectedEpisode = currentGroup[currentIndex + 1];
+                    }
+                },
+
+                navigateToPreviousMovie() {
+                    if (!this.hasPreviousMovie) return;
+                    const currentGroup = this.groupedMovies[this.activeTab.movies].items;
+                    const currentIndex = currentGroup.findIndex(movie => movie.EpisodeNumber === this.selectedEpisode.EpisodeNumber);
+                    if (currentIndex !== -1 && currentIndex > 0) {
+                        this.selectedEpisode = currentGroup[currentIndex - 1];
+                    }
+                },
+
+                navigateToNextManga() {
+                    if (!this.hasNextManga) return;
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
+                    if (currentIndex !== -1 && currentIndex < currentGroup.length - 1) {
+                        this.selectedManga = currentGroup[currentIndex + 1];
+                    }
+                },
+
+                navigateToPreviousManga() {
+                    if (!this.hasPreviousManga) return;
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
+                    if (currentIndex !== -1 && currentIndex > 0) {
+                        this.selectedManga = currentGroup[currentIndex - 1];
                     }
                 },
 
