--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -701,6 +701,9 @@
                                                 src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
                                                 class="absolute right-0 top-0 w-6 h-6 ml-2"
                                             />
+                                            <div v-if="selectedManga.status === 'sending'" class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 rounded">
+                                                <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-white"></div>
+                                            </div>
                                         </div>   
                                     </div>
                                 </div>
@@ -5436,6 +5439,9 @@
                                             src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
                                             class="absolute right-0 top-0 w-6 h-6 ml-2"
                                         />
+                                        <div v-if="manga.status === 'sending'" class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50 rounded">
+                                            <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-white"></div>
+                                        </div>
                                         </div>
                                     </div>
                                 </fieldset>                                                                    
