--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5152,6 +5152,7 @@
                         <div class="flex flex-wrap justify-between items-center" id="pagination-buttons">
                             
                             <button @click="goToFirstPage" 
+                                    :disabled="currentPage === 1"
                                     class="bg-green-700 text-white font-bold px-4 py-2 rounded 
                                         hover:bg-green-600 disabled:opacity-50 disabled:cursor-not-allowed
                                         transition-all duration-100 active:bg-green-800 active:scale-90">
@@ -5175,6 +5176,7 @@
                             </button>
                             
                             <button @click="goToLastPage" 
+                                    :disabled="currentPage === totalPages"
                                     class="bg-green-700 text-white font-bold px-4 py-2 rounded 
                                         hover:bg-green-600 disabled:opacity-50 disabled:cursor-not-allowed
                                         transition-all duration-100 active:bg-green-800 active:scale-90">
