--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -779,7 +779,7 @@
 
     <br>
         <!-- Search and Filters -->
-        <div class="mb-2 flex flex-col gap-4 items-center">
+        <div class="mb-4 flex flex-col gap-4 items-center">
             <div class="flex gap-4 w-full justify-center">
                 <select v-model="selectedFilter" class="border px-4 font-bold py-2 rounded">
                     <option value="all">الكل</option>
@@ -5189,7 +5189,7 @@
 
         <!-- Table -->
         <!-- Progress Spinner -->
-        <div v-if="loading" class="text-center py-2">
+        <div v-if="loading" class="text-center">
             <div class="relative w-24 h-24 mx-auto">
               <div class="w-full h-full animate-spin">
                 <svg class="w-full h-full" viewBox="0 0 100 100" style="transform: rotate(-90deg);">
