--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5189,7 +5189,7 @@
 
         <!-- Table -->
         <!-- Progress Spinner -->
-        <div v-if="loading" class="text-center">
+        <div v-if="loading" class="text-center py-4 -mb-4">
             <div class="relative w-24 h-24 mx-auto">
               <div class="w-full h-full animate-spin">
                 <svg class="w-full h-full" viewBox="0 0 100 100" style="transform: rotate(-90deg);">
